# ai-defense-python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
aidefense/: __init__.py  async_request_handler.py  client.py  config.py  exceptions.py  request_handler.py  version.py
aidefense/aibom/: README.md  __init__.py  aibom_base.py  models.py  routes.py
aidefense/management/: applications.py  base_client.py  connections.py  events.py  management_client.py  policies.py
aidefense/mcpscan/: README.md  __init__.py  mcp_scan_base.py  models.py  resource_connections.py  routes.py
aidefense/runtime/: __init__.py  aidefense-external.yaml  chat_inspect.py  chat_models.py  constants.py  http_inspect.py  http_models.py  inspection_client.py  mcp_inspect.py  models.py  utils.py
aidefense/tests/: test_application_management_client.py  test_chat_inspect.py  test_config.py  test_connection_management_client.py  test_event_management_client.py  test_http_inspect.py  test_http_inspect_coverage.py  test_http_inspect_edge_cases.py  test_http_inspect_unified.py  test_inspection_client.py  test_management_client.py  test_mcp_inspection_client.py  (+6 more)
examples/: README.md  http_inspect_cohere_api.py  http_inspect_http_api.py  http_inspect_multiple_clients.py
examples/agentsec/2-agent-frameworks/google-adk-agent/: agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/google-adk-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/google-adk-agent/tests/unit/: test_google_adk_example.py
scripts/: run-integration-tests.sh  run-unit-tests.sh
(+150 files in other folders)
