[project]
name = "google-adk-agentsec-example"
version = "0.1.0"
description = "Google ADK agent with Cisco AI Defense (agentsec) runtime protection"
requires-python = ">=3.10"

dependencies = [
    "google-adk>=1.0.0",
    "google-genai>=1.14.0,<2.0.0",
    "mcp>=1.6.0,<2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
